[workspace]
members = [
    "wasmdev",
    "wasmdev_macro",
    "wasmdev_server",
    "examples/simple",
    "examples/simple_async",
    "examples/counter_leptos",
    "examples/counter_yew",
]

[workspace.package]
version = "0.1.2"

[profile.release]
opt-level = 'z'

[profile.dev.package.wasm-bindgen-cli-support]
opt-level = 3

[workspace.dependencies]
wasmdev        = { version = "0.1.2", path = "./wasmdev" }
wasmdev_macro  = { version = "0.1.2", path = "./wasmdev_macro" }
wasmdev_server = { version = "0.1.2", path = "./wasmdev_server" }