[workspace]
members = [
    "wasmdev",
    "wasmdev_core",
    "wasmdev_macro",
    "wasmdev_server",
    "examples/counter_leptos",
    "examples/counter_sauron",
    "examples/counter_sycamore",
    "examples/counter_yew",
    "examples/simple",
    "examples/simple_async",
]

[workspace.package]
version = "0.1.6"

[profile.release]
opt-level = 'z'

[profile.dev.package.wasm-bindgen-cli-support]
opt-level = 3

[workspace.dependencies]
wasmdev        = { version = "0.1.6", path = "./wasmdev" }
wasmdev_core   = { version = "0.1.6", path = "./wasmdev_core" }
wasmdev_macro  = { version = "0.1.6", path = "./wasmdev_macro" }
wasmdev_server = { version = "0.1.6", path = "./wasmdev_server" }
