[package]
name = "wasmdev"
version = "0.1.0"
edition = "2021"
description = "A rust web development server library"
license = "MIT"

[lib]
proc-macro = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xshell = "0.2.3"

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
server = { path="../server" }