[package]
name        = "wasmdev"
version     = { workspace = true }
edition     = "2021"
description = "A rust web development server library"
license     = "MIT"
repository  = "https://github.com/Gronis/wasmdev"
readme      = "../README.md"

[dependencies]
wasmdev_macro = { workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmdev_server = { workspace = true }

[features]
default = ["panic_hook"]
panic_hook = ["dep:console_error_panic_hook"]
nightly = ["wasmdev_server/nightly", "wasmdev_macro/nightly"]
