[package]
name        = "wasmdev_core"
version     = { workspace = true }
edition     = "2021"
description = "wasmdev core implementation, used by wasmdev server + macros"
license     = "MIT"
repository  = "https://github.com/Gronis/wasmdev"
readme      = "../README.md"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xshell = "0.2.3"
wasm-bindgen-cli-support = "0.2.87"
minify-js = "0.5.6"

[features]
nightly = []