[package]
name        = "wasmdev_macro"
version     = { workspace = true }
edition     = "2021"
description = "wasmdev macro implementation"
license     = "MIT"
repository  = "https://github.com/Gronis/wasmdev"
readme      = "../README.md"

[lib]
proc-macro = true

[dependencies]
wasmdev_server = { workspace = true }
proc-macro2 = "1.0.49"
quote = "1.0.23"
