[package]
name        = "wasmdev_macro"
version     = { workspace = true }
edition     = "2021"
description = "wasmdev macro implementation"
license     = "MIT"
repository  = "https://github.com/Gronis/wasmdev"
readme      = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmdev_core = { workspace = true }
