[package]
name        = "wasmdev_server"
version     = { workspace = true }
edition     = "2021"
description = "wasmdev server implementation"
license     = "MIT"
repository  = "https://github.com/Gronis/wasmdev"
readme      = "../README.md"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmdev_core = { workspace = true }
base64 = "0.21.0"
sha1 = "0.10.5"
notify = "5.0.0"
