[package]
name        = "wasmdev_server"
version     = { workspace = true }
edition     = "2021"
description = "wasmdev server implementation"
license     = "MIT"
repository  = "https://github.com/Gronis/wasmdev"
readme      = "../README.md"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmdev_core = { workspace = true }
base64 = "0.21.2"
sha1 = "0.10.5"
notify = "6.0.1"

[features]
nightly = ["wasmdev_core/nightly"]
