[package]
name = "simple_async"
version = { workspace = true }
edition = "2021"

[dependencies]
wasmdev = { workspace = true }
tokio   = { version = "1.25.0", features = ["rt", "macros"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]